fixed scheduling issues where it was keeping track of the drones incorrectly for 2 zones